# pixeldino

./: .gitignore  LICENSE  README.md  pyproject.toml
pixeldino/: __init__.py  cli.py  generator.py
pixeldino.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
